# xiaozhang

./: .env.example  .gitignore  PLAN.md  PROJECT_BRIEF.md  README.md  REQUIREMENTS-vision-skill.md  STATUS.md  bench_llm.py  crawl_dzc.py  crawl_sites.py  dev_console.py  extract_source.py  extract_source2.py  knowledge-dev.json  main.py  playbook-dev.md  playbook-runtime.md  prompt-dev.md  prompt-runtime.md  pyproject.toml  session_log.md  startup.ps1  test_gpu.py  test_m3u8.py  xz.py
.claude/: settings.local.json
.kiro/steering/: project-plan.md
config/: apps.yaml  ccb_system_prompt.md  llm.yaml  runtime.yaml  soul.md
data/: app_index.json  installed_apps.json
models/wake_word/: xiaozhang_config.json  xiaozhang_wakeword.onnx  xiaozhang_wakeword_config.json
scripts/: install_autostart.bat  install_opus.py  preload_models.py  start_xiaozhang.bat  uninstall_autostart.bat
skills/_builtin/douyin-search-play/: SKILL.md
skills/_builtin/open-baidu/: SKILL.md
skills/_builtin/open-bilibili/: SKILL.md
skills/_builtin/open-calculator/: SKILL.md
skills/_builtin/open-chrome/: SKILL.md
skills/_builtin/open-cmd/: SKILL.md
skills/_builtin/open-dingtalk/: SKILL.md
skills/_builtin/open-douyin/: SKILL.md
skills/_builtin/open-douyin-search/: SKILL.md
skills/_builtin/open-edge/: SKILL.md
skills/_builtin/open-explorer/: SKILL.md
skills/_builtin/open-feishu/: SKILL.md
skills/_builtin/open-github/: SKILL.md
skills/_builtin/open-kiro/: SKILL.md
skills/_builtin/open-lol/: SKILL.md
skills/_json/: 动画.json  首页.json
src/: __init__.py  hermes_dispatch.py  runtime.py
src/actions/: __init__.py  douyin_actions.py  executor.py  playwright_action.py  raw_input.py  tier_a_vision.py  tier_c_uia.py  tier_d_protocol.py
src/audio/: __init__.py  recorder.py  stt.py  stt_doubao.py  tts.py  vad.py  wake_word.py  wake_word_custom.py  wake_word_loop.py
src/brain/: __init__.py  action_schema.py  cc_brain.py  intent_classifier.py  llm_router.py  prompt_builder.py
src/core/: __init__.py  config.py  cpu_guard.py  game_detector.py  logger.py  resource_manager.py  safety.py  state_machine.py  token_tracker.py
src/crawlers/: __init__.py  news_feed.py  pan_search.py  torrent_search.py
src/learning/: __init__.py  evolution.py  skill_stats.py  workflow_recorder.py  workflow_replay.py
src/local_models/: __init__.py  base.py  omniparser_model.py  rapidocr_model.py  sensevoice_model.py  vad_model.py  wake_word_model.py
src/memory/: __init__.py  recall.py  store.py  user_profile.py  vector.py
src/skills/: __init__.py  generator.py  json_skill.py  loader.py  matcher.py  parser.py
src/tray/: __init__.py  tray_icon.py
src/ui/: toast.py
src/utils/: app_scanner.py
src/vision/: __init__.py  omniparser.py  screen_parser.py  screenshot.py  vision_query.py
tests/: __init__.py  conftest.py  test_action_schema.py  test_actions_d.py  test_config.py  test_cpu_guard.py  test_executor_downgrade.py  test_game_detector.py  test_intent_classifier.py  test_llm_router.py  test_memory_store.py  test_resource_manager.py  test_safety.py  test_skill_parser.py  test_skill_stats.py  test_skills_all_valid.py  test_skills_loader_matcher.py  test_state_machine.py
(+46 files in other folders)
